fix gallery gap

--- a/styles.css
+++ b/styles.css
@@ -495,9 +495,6 @@ p {
 }
 
 @media screen and (min-width: 1200px) {
-    .grid {
-        gap: 0;
-    }
     .grid img {
         width: 280px;
     }
